--- a/vix_mlmc.ipynb
+++ b/vix_mlmc.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b466cb66",
+   "metadata": {},
+   "source": [
+    "<font color=\"orange\">MLMC</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ea5bef8",
    "metadata": {},
    "source": [
@@ -25,22 +33,128 @@
     "$$\n",
     "\n",
     "We need to compute the covariance matrix of the vector \n",
-    "$(Y_T^{u_i})_{0 \\leq i \\leq n}$ where $u_i = T + i \\Delta/n$ for $i = 0, 1, \\ldots, n$.\n",
+    "$(Y_T^{u_i})_{0 \\leq i \\leq n}$ where $u_i = T + i \\Delta/n$ for $i = 0, 1, \\ldots, n$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "69c1b924",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%config InlineBackend.figure_format = 'retina'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bdd08487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from rbergomi import RoughBergomi\n",
+    "import matplotlib as mpl\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
     "\n",
-    "Observe that \n",
-    "$\\mathrm{Cov}(Y_T^{u_i}, Y_T^{u_j})=...$"
+    "sns.set_theme(\"talk\")\n",
+    "mpl.rcParams[\"figure.figsize\"] = (8, 6)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69c1b924",
+   "id": "e1a373f0",
+   "metadata": {},
+   "source": [
+    "For $n \\in \\mathbb{N}^*$, consider the uniform grid $u_i = T + i \\Delta/n$ for $i = 0, 1, \\ldots, n$.\n",
+    "\n",
+    "We are interested in the right-point rectangle scheme\n",
+    "\n",
+    "$$\n",
+    "    \\text{VIX}_T^{2,\\mathcal{R}_n}\n",
+    "    = \\frac{1}{n} \\sum_{i=1}^{n} \\xi_T^{u_i}\n",
+    "$$\n",
+    "\n",
+    "and the trapezoidal scheme\n",
+    "\n",
+    "$$\n",
+    "    \\text{VIX}_T^{2,\\mathcal{T}_n}\n",
+    "    = \\frac{1}{2n} \\sum_{i=1}^{n} \n",
+    "    \\left(\\xi_T^{u_{i-1}} + \\xi_T^{u_i}\\right)\n",
+    "$$\n",
+    "\n",
+    "Let $X_T^u:= \\log \\xi_T^u$ and observe that $(X_T^{u_i})_{0 \\leq i \\leq n}$\n",
+    "forms an $(n+1)$-dimensional Gaussian vector with mean vector \n",
+    "$\\mu = \\{\\mu_i\\}_{0 \\leq i \\leq n}$ and covariance matrix $C = \\{C_{i,j}\\}_{0 \\leq i,j \\leq n}$.\n",
+    "\n",
+    "Here\n",
+    "\n",
+    "$$\n",
+    "    \\mu_i = \\log \\xi_0^{u_i} - \\frac{\\eta^2}{2} (u_i^{2H} - (u_i-T)^{2H})\n",
+    "$$\n",
+    "\n",
+    "and \n",
+    "\n",
+    "$$\n",
+    "    C_{i,j} = 2 H \\int_0^T (u_i-s)^{H-1/2} (u_j-s)^{H-1/2} \\, ds\n",
+    "$$\n",
+    "\n",
+    "The covariance matrix term $C_{i,j}$ can be computed using the Gaussian \n",
+    "hypergeometric function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f935a673",
+   "metadata": {},
+   "source": [
+    "# Strong error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd2a77c1",
+   "metadata": {},
+   "source": [
+    "# Weak error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db8b6783",
+   "metadata": {},
+   "source": [
+    "# Multilevel Monte Carlo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f048d36d",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
