update notebook local_vol_rough_vol

--- a/vix_mlmc.ipynb
+++ b/vix_mlmc.ipynb
@@ -5,7 +5,8 @@
    "id": "b466cb66",
    "metadata": {},
    "source": [
-    "<font color=\"orange\">MLMC</font>"
+    "<font color=\"orange\">Multilevel Monte Carlo simulation for VIX options in the rough\n",
+    "Bergomi model</font>"
    ]
   },
   {
