--- a/vix_weak_approx.ipynb
+++ b/vix_weak_approx.ipynb
@@ -5,7 +5,8 @@
    "id": "2fbd4fad",
    "metadata": {},
    "source": [
-    "<font color=\"orange\">Weak approximation</font>"
+    "<font color=\"orange\">Weak approximations and VIX option price\n",
+    "expansions in forward variance curve models</font>"
    ]
   },
   {
@@ -14,6 +15,26 @@
    "metadata": {},
    "source": [
     "Convention is different here: $\\eta$ is replaced with $\\eta \\sqrt{2H}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f5cba05",
+   "metadata": {},
+   "source": [
+    "We approximte the \n",
+    "\n",
+    "$$\n",
+    "    \\text{VIX}_T^2 = \\frac{1}{\\Delta} \n",
+    "    \\int_{T}^{T+\\Delta} \\xi_0^u \\exp \\{Y_T^u\\} du\n",
+    "$$\n",
+    "\n",
+    "with a lognormal proxy\n",
+    "\n",
+    "$$\n",
+    "    \\text{VIX}_{T,P}^2 \\approx \\mathbb{E}[\\text{VIX}_T^2]\n",
+    "    \\exp \\left\\{\\frac{1}{\\Delta} \\int_{T}^{T+\\Delta} \\xi_0^u Y_T^u \\frac{du}{\\mathbb{E}[\\text{VIX}_T^2]}\\right\\}\n",
+    "$$"
    ]
   },
   {
