update weak vix notebook

--- a/vix_mlmc.ipynb
+++ b/vix_mlmc.ipynb
@@ -11,6 +11,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4342764",
+   "metadata": {},
+   "source": [
+    "Convention is different here: the parameter $\\eta$ in the paper must be \n",
+    "replaced with $\\eta \\sqrt{2H}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ea5bef8",
    "metadata": {},
    "source": [
@@ -88,11 +97,10 @@
     "    \\left(\\xi_T^{u_{i-1}} + \\xi_T^{u_i}\\right)\n",
     "$$\n",
     "\n",
-    "Let $X_T^u:= \\log \\xi_T^u$ and observe that $(X_T^{u_i})_{0 \\leq i \\leq n}$\n",
+    "Observe that $\\{\\log \\xi_{T}^{u_i}\\}_{0 \\leq i \\leq n}$\n",
     "forms an $(n+1)$-dimensional Gaussian vector with mean vector \n",
-    "$\\mu = \\{\\mu_i\\}_{0 \\leq i \\leq n}$ and covariance matrix $C = \\{C_{i,j}\\}_{0 \\leq i,j \\leq n}$.\n",
-    "\n",
-    "Here\n",
+    "$\\mu = \\{\\mu_i\\}_{0 \\leq i \\leq n}$ and covariance matrix $C = \\{C_{i,j}\\}_{0 \\leq i,j \\leq n}$\n",
+    "defined as\n",
     "\n",
     "$$\n",
     "    \\mu_i = \\log \\xi_0^{u_i} - \\frac{\\eta^2}{2} (u_i^{2H} - (u_i-T)^{2H})\n",
@@ -105,7 +113,29 @@
     "$$\n",
     "\n",
     "The covariance matrix term $C_{i,j}$ can be computed using the Gaussian \n",
-    "hypergeometric function."
+    "hypergeometric function.\n",
+    "\n",
+    "A Monte Carlo estimator for the price of a VIX option with payoff $\\varphi$ is\n",
+    "\n",
+    "$$\n",
+    "    \\mathbb{E}[\\varphi(\\text{VIX}_T^{2})] \n",
+    "    \\approx \\frac{1}{M} \\sum_{m=1}^{M} \n",
+    "    \\varphi \\left(\\frac{1}{n} \\sum_{i=1}^{n} \\exp\\{X_T^{u_i,m}\\}\\right)\n",
+    "$$\n",
+    "\n",
+    "where $X_T^u = \\log \\xi_T^u$. \n",
+    "\n",
+    "A natural control variate is the lognormal random variable\n",
+    "$\\exp\\left\\{\\frac{1}{n} \\sum_{i=1}^{n}X_T^{u_i} \\right\\}$. Observe that\n",
+    "$\\frac{1}{n} \\sum_{i=1}^{n}X_T^{u_i}$ is normal with mean and standard deviation\n",
+    "\n",
+    "$$\n",
+    "    \\bar{\\mu}_n = \\frac{1}{n} \\sum_{i=1}^{n} \\mu_i,\n",
+    "    \\qquad\n",
+    "    \\bar{\\sigma}_n = \\sqrt{\\frac{1}{n^2} \\sum_{i,j=1}^{n} C_{i,j}}\n",
+    "$$\n",
+    "\n",
+    "\n"
    ]
   },
   {
