--- a/vix_mlmc.ipynb
+++ b/vix_mlmc.ipynb
@@ -430,18 +430,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def params_ml(K, T, Delta, x0, H, eta, n0, eps, option=\"rec\"):\n",
+    "def params_ml(K, T, n0, eps, option=\"rec\"):\n",
     "    # Lipschitz constant when payoff = max(np.sqrt(x)-strike, 0) -> call\n",
     "    lip = 1 / (2 * K)\n",
-    "    c2 = 10 * pow(lip * lim_l2se(T, Delta, x0, H, eta), 2) * pow(n0, -2)\n",
-    "    c1 = lip * lim_l2se(T, Delta, x0, H, eta) * pow(n0, -1)\n",
-    "    L = int(np.ceil(np.log(np.sqrt(2) * c1 * pow(eps, -1)) / np.log(2)))\n",
-    "    N0 = int(np.ceil(2 * pow(eps, -2) * c2 * (L + 1)))\n",
-    "    n = np.array([n0 * (2 ** (l)) for l in range(L + 1)]).astype(int)\n",
+    "    lim = rbergomi.limit_strong_error_vix_right(n=n0, T=T)\n",
+    "    c2 = 10 * (lip * lim) ** 2\n",
+    "    c1 = lip * lim\n",
+    "    L = int(np.ceil(np.log(np.sqrt(2) * c1 / eps) / np.log(2)))\n",
+    "    N0 = int(np.ceil((2.0 / eps**2) * c2 * (L + 1)))\n",
+    "    n = np.array([n0 * 2**level for level in range(L + 1)]).astype(int)\n",
     "    if option == \"rec\":\n",
-    "        N = np.array([N0 * (2 ** (-2 * l)) for l in range(L + 1)]).astype(int)\n",
+    "        N = np.array([N0 * 2.0 ** (-2 * level) for level in range(L + 1)]).astype(int)\n",
     "    if option == \"trap\":\n",
-    "        N = np.array([N0 * (2 ** (-(2 + H) * l)) for l in range(L + 1)]).astype(int)\n",
+    "        N = np.array(\n",
+    "            [N0 * 2 ** (-(2.0 + rbergomi.H) * level) for level in range(L + 1)]\n",
+    "        ).astype(int)\n",
     "    return (n, N, L)"
    ]
   },
