fix control variate

--- a/vix_mlmc.ipynb
+++ b/vix_mlmc.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "69c1b924",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bdd08487",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,6 @@
     "import matplotlib as mpl\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from scipy import integrate\n",
     "\n",
     "sns.set_theme(\"talk\")\n",
     "mpl.rcParams[\"figure.figsize\"] = (8, 6)\n",
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "59c76275",
    "metadata": {},
    "outputs": [],
@@ -424,28 +423,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "923a9e26",
+   "metadata": {},
+   "source": [
+    "We price an ATM VIX call option."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "328915e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    \"s0\": 1.0,\n",
+    "    \"xi0\": lambda u: np.ones_like(u) * 0.235**2,\n",
+    "    \"rho\": -0.7,\n",
+    "    \"H\": 0.1,\n",
+    "    \"eta\": 0.3,\n",
+    "}\n",
+    "\n",
+    "rbergomi = RoughBergomi(**params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "22a92425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = 0.5\n",
+    "tab_eps = np.linspace(3 * 10 ** (-2), 9.9 * 10 ** (-2), 10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "270f0148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_disc_ref = 500\n",
+    "n_mc_ref = 3 * 10**5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "380b2ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vix_atm_call = rbergomi.price_vix(\n",
+    "    k=0.0, T=T, n_mc=n_mc_ref, n_disc=n_disc_ref, seed=SEED, rule=\"trap\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "71166f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_mc_eps = np.ceil(tab_eps ** (-2)).astype(int)\n",
+    "n_disc_eps = np.ceil(tab_eps ** (-1)).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dae95d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1112,  705,  487,  356,  272,  215,  174,  143,  120,  103])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc_eps = np.zeros_like(n_mc_eps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "196b2ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "f048d36d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def params_ml(K, T, n0, eps, option=\"rec\"):\n",
+    "def params_mlmc(K, T, n_disc_0, eps, option=\"rec\"):\n",
     "    # Lipschitz constant when payoff = max(np.sqrt(x)-strike, 0) -> call\n",
     "    lip = 1 / (2 * K)\n",
-    "    lim = rbergomi.limit_strong_error_vix_right(n=n0, T=T)\n",
+    "    lim = rbergomi.limit_strong_error_vix_right(n=n_disc_0, T=T)\n",
     "    c2 = 10 * (lip * lim) ** 2\n",
     "    c1 = lip * lim\n",
-    "    L = int(np.ceil(np.log(np.sqrt(2) * c1 / eps) / np.log(2)))\n",
-    "    N0 = int(np.ceil((2.0 / eps**2) * c2 * (L + 1)))\n",
-    "    n = np.array([n0 * 2**level for level in range(L + 1)]).astype(int)\n",
+    "    level_max = int(np.ceil(np.log(np.sqrt(2) * c1 / eps) / np.log(2)))\n",
+    "    if level_max <= 0:\n",
+    "        raise ValueError(\"level_max must be >= 1.\")\n",
+    "    n_mc_0 = int(np.ceil((2.0 / eps**2) * c2 * (level_max + 1)))\n",
+    "    n_disc_levels = np.array(\n",
+    "        [int(n_disc_0 * 2**level) for level in range(level_max + 1)]\n",
+    "    )\n",
+    "\n",
     "    if option == \"rec\":\n",
-    "        N = np.array([N0 * 2.0 ** (-2 * level) for level in range(L + 1)]).astype(int)\n",
-    "    if option == \"trap\":\n",
-    "        N = np.array(\n",
-    "            [N0 * 2 ** (-(2.0 + rbergomi.H) * level) for level in range(L + 1)]\n",
-    "        ).astype(int)\n",
-    "    return (n, N, L)"
+    "        n_mc_levels = np.array(\n",
+    "            [max(1, int(n_mc_0 / 2 ** (2 * level))) for level in range(level_max + 1)]\n",
+    "        )\n",
+    "    elif option == \"trap\":\n",
+    "        n_mc_levels = np.array(\n",
+    "            [\n",
+    "                max(1, int(n_mc_0 / 2 ** ((2.0 + rbergomi.H) * level)))\n",
+    "                for level in range(level_max + 1)\n",
+    "            ]\n",
+    "        )\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown option: choose 'rec' or 'trap'\")\n",
+    "    cost = int(np.sum(n_disc_levels * n_mc_levels**2))\n",
+    "    return (n_disc_levels, n_mc_levels, level_max, cost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a843f39b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 2]), array([34,  8]), 1, 1284)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_mlmc(K=0.2, T=T, n_disc_0=1.0, eps=1e-2)"
    ]
   },
   {
@@ -453,6 +586,168 @@
    "id": "d4f579a3",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebfd176c",
+   "metadata": {},
+   "source": [
+    "# Appendix: control variate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e344f168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add example and fix problems.\n",
+    "# also, add control variate for call and put options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2a145f58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    \"s0\": 1.0,\n",
+    "    \"xi0\": lambda u: np.ones_like(u) * 0.3**2,\n",
+    "    \"rho\": -0.7,\n",
+    "    \"H\": 0.3,\n",
+    "    \"eta\": 0.8,\n",
+    "}\n",
+    "\n",
+    "rbergomi = RoughBergomi(**params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d48d14e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = 0.5\n",
+    "n_mc = 3 * 10**5\n",
+    "n_disc = 200\n",
+    "rule = \"right\"\n",
+    "\n",
+    "vix, vix_cv = rbergomi.simulate_vix(\n",
+    "    T=T, n_mc=n_mc, n_disc=n_disc, seed=SEED, control_variate=True, rule=rule\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2c95ab67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.03386377693970982)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.maximum(vix - vix.mean(), 0.0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "81ba2358",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.03388903265061207)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    np.maximum(vix - vix.mean(), 0.0).mean()\n",
+    "    - np.maximum(vix_cv - vix_cv.mean(), 0.0).mean()\n",
+    "    + rbergomi.price_vix_control_variate(T=T, K=vix_cv.mean(), n_disc=n_disc, rule=rule)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f82447d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = np.linspace(-0.1, 0.1, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e2f6a1c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04768433, 0.04046798, 0.03382367, 0.02781293, 0.02247727])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbergomi.price_vix(k=k, T=T, n_mc=n_mc, n_disc=n_disc, rule=rule, control_variate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d9892a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04768023])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbergomi.price_vix(k=k, T=T, n_mc=n_mc, n_disc=n_disc, rule=rule, control_variate=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aec74a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: clean control_vatiate option in methods."
+   ]
   }
  ],
  "metadata": {
